[package]
name = "cwo-cli"
version = "0.1.0"
authors = ["Nicolas Pellerin <hello@nicopellerin.io>"]
edition = "2018"

[dependencies]
colored = "2"
dotenv = "0.15.0"
reqwest = {version = "0.11.4", features = ["blocking", "multipart", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = {version = "2.0.0-beta.3", default-features = false, features = ["sync"]}
chrono = "0.4"

